feat(list movies): add the duration of the movies in the overlays + adapt the website with the location where the user is

--- a/src/app/movie-detail-overlay/movie-detail-overlay.component.html
+++ b/src/app/movie-detail-overlay/movie-detail-overlay.component.html
@@ -22,6 +22,9 @@
                         {{ movie.release_date ? (movie.release_date | date: 'longDate') : 'NA' }}
                     </span>
                     <span class="pill">
+                        {{ formatRuntime(runtimeMinutes) }}
+                    </span>
+                    <span class="pill">
                         ⭐ {{ movie.vote_average != null ? movie.vote_average : 'NA' }}
                     </span>
                     <span class="pill">
